featured post "Edit" button position fix + featured post lists text-align

--- a/style.less
+++ b/style.less
@@ -69,6 +69,26 @@ body {
 		padding: 0 8px;
 		border: none;
 	}
+	
+	.widget_core_coll_featured_intro .featurepost {
+		.evo_post_title {
+			h2,
+			.btn-group {
+				display: inline-block;
+			}
+			.btn-group {
+				padding-top: 5px;
+				padding-left: 20px;
+			}
+		}
+	}
+	
+	.evo_post__full_text {
+		ul {
+			margin-left: 25px;
+			text-align: left !important;
+		}
+	}
 }
 
 // Secondary Area:
@@ -588,6 +608,10 @@ div.action_messages, div.log_container {
 		display: table-cell;
 		padding: 20px 0 10px 30px;
 		vertical-align: middle;
+		
+		> a {
+			color: #333 !important;
+		}
 	}
 }
 
